kmsaudiomixer: Add skelleton class
Change-Id: Iabfd46f76609d4d169d80d3e8b3048e10da5dbb0

--- a/Makefile.am
+++ b/Makefile.am
@@ -57,7 +57,8 @@ libgstkurento_la_SOURCES = kmsplugin.c \
                         gstsctpclientsink.c gstsctpclientsink.h \
                         gstsctpserversrc.c gstsctpserversrc.h \
 			kmscompositemixer.c kmscompositemixer.h \
-			kmsdispatcher.c kmsdispatcher.h
+			kmsdispatcher.c kmsdispatcher.h \
+			kmsaudiomixer.c kmsaudiomixer.h
 
 # compiler and linker flags used to compile this plugin, set in configure.ac
 libgstkurento_la_CFLAGS = $(GST_CFLAGS) $(GIO_CFLAGS) $(NICE_CFLAGS) $(SOUP_CFLAGS) -Werror
