--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>com.kurento</groupId>
 		<artifactId>kmf-parent-pom</artifactId>
-		<version>4.1.0</version>
+		<version>4.1.1-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.kurento.kmf</groupId>
 	<artifactId>kmf-jsonrpcconnector</artifactId>
-	<version>4.1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Kurento Media Framework - JSON-RPC Protocol</name>
@@ -94,7 +94,44 @@
 			<artifactId>slf4j-simple</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.woorea</groupId>
+			<artifactId>keystone-client</artifactId>
+		</dependency>
 	</dependencies>
+
+	<profiles>
+		<profile>
+			<id>jersey</id>
+			<dependencies>
+				<dependency>
+					<groupId>com.woorea</groupId>
+					<artifactId>jersey-connector</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>jersey2</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>com.woorea</groupId>
+					<artifactId>jersey2-connector</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>resteasy</id>
+			<dependencies>
+				<dependency>
+					<groupId>com.woorea</groupId>
+					<artifactId>resteasy-connector</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 
 	<repositories>
 		<repository>
