--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "main": "lib/index.js",
   "scripts": {
-    "test": "qunit-cli -c KwsMedia:. test/*.js"
+    "test": "qunit-cli -c KwsMedia:. -c wock:node_modules/wock test/_common.js test/_proxy.js test/*.js"
   },
   "repository": {
     "type": "git",
