--- a/pom.xml
+++ b/pom.xml
@@ -1,35 +1,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
 	<modelVersion>4.0.0</modelVersion>
-	<packaging>war</packaging>
-	<version>1.0.1-SNAPSHOT</version>
+
+	<parent>
+		<groupId>com.kurento</groupId>
+		<artifactId>kmf-parent-pom</artifactId>
+		<version>4.1.0</version>
+	</parent>
 
 	<groupId>com.kurento.kmf</groupId>
 	<artifactId>kmf-content-api-test</artifactId>
+	<version>4.1.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8 </project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<maven.compiler.source>1.6</maven.compiler.source>
-		<maven.compiler.target>1.6</maven.compiler.target>
-
-		<!-- Dependencies Versions -->
-		<servlet-api.version>3.0.1</servlet-api.version>
-		<slf4j-api.version>1.7.5</slf4j-api.version>
-		<cors-filter.version>1.7.1</cors-filter.version>
-		<commons-lang.version>2.6</commons-lang.version>
-
-		<!-- Kurento Dependencies Versions -->
-		<kmf-content-api.version>1.0.1-SNAPSHOT</kmf-content-api.version>
-		<kws-content-api.version>1.0.1-SNAPSHOT</kws-content-api.version>
 
 		<!-- Test Dependencies Versions -->
-		<junit.version>4.11</junit.version>
-		<arquillian.version>1.1.2.Final</arquillian.version>
+		<arquillian.version>1.1.3.Final</arquillian.version>
 		<ApacheJMeter_core.version>2.9</ApacheJMeter_core.version>
 		<jmeter-maven-plugin.version>1.8.1</jmeter-maven-plugin.version>
-		<selenium-java.version>2.38.0</selenium-java.version>
+		<selenium-java.version>2.40.0</selenium-java.version>
 
 		<!-- JBoss -->
 		<jboss-as.version>7.1.1.Final</jboss-as.version>
@@ -39,23 +29,14 @@
 		<jboss-as.management.port>10999</jboss-as.management.port>
 		<jboss-as.remoting.port>4470</jboss-as.remoting.port>
 
-		<!-- Plugins Versions -->
-		<maven-war-plugin.version>2.4</maven-war-plugin.version>
-		<maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
-		<maven-failsafe-plugin.version>2.16</maven-failsafe-plugin.version>
-		<maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
-		<maven-surefire-report-plugin.version>2.16</maven-surefire-report-plugin.version>
-		<maven-project-info-reports-plugin.version>2.0</maven-project-info-reports-plugin.version>
-		<maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
-
-		<!-- Extensions Versions -->
-		<wagon-ssh.version>2.0</wagon-ssh.version>
-
 		<!-- Webdrivers versions -->
 		<linux32-webdriver.version>2.7</linux32-webdriver.version>
 		<linux64-webdriver.version>2.7</linux64-webdriver.version>
 		<mac32-webdriver.version>2.7</mac32-webdriver.version>
 		<win32-webdriver.version>2.7</win32-webdriver.version>
+
+		<!-- Plugins Versions -->
+		<maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
 	</properties>
 
 	<name>Kurento Media Framework - Content Management API Tests</name>
@@ -65,81 +46,41 @@
 		The kmf-content-api-test project contains the test cases
 		of the Kurento server side Content Management API.
 	</description>
-	<url>https://github.com/Kurento/kmf-content-api-test</url>
-	<licenses>
-		<license>
-			<name>GNU Lesser General Public License</name>
-			<url>http://www.gnu.org/licenses/lgpl-2.1.txt</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
-
-	<organization>
-		<name>Kurento</name>
-		<url>http://www.kurento.com</url>
-	</organization>
-
-	<developers>
-		<developer>
-			<id>llopez</id>
-			<name>Luis López Fernández</name>
-		</developer>
-		<developer>
-			<id>bgarcia</id>
-			<name>Boni García Gutiérrez</name>
-		</developer>
-	</developers>
-
-	<mailingLists>
-		<mailingList>
-			<name>Kurento</name>
-			<subscribe>http://groups.google.com/group/kurento/subscribe</subscribe>
-			<post>http://groups.google.com/group/kurento/post</post>
-			<archive>http://groups.google.com/group/kurento/about</archive>
-		</mailingList>
-	</mailingLists>
 
 	<dependencies>
 		<!-- Kurento Dependencies -->
 		<dependency>
 			<groupId>com.kurento.kmf</groupId>
 			<artifactId>kmf-content-api</artifactId>
-			<version>${kmf-content-api.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.kurento.kws</groupId>
 			<artifactId>kws-content-api</artifactId>
-			<version>${kws-content-api.version}</version>
 		</dependency>
 
 		<!-- Other Dependencies -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<version>${servlet-api.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j-api.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.thetransactioncompany</groupId>
 			<artifactId>cors-filter</artifactId>
-			<version>${cors-filter.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
-			<version>${commons-lang.version}</version>
 		</dependency>
 
 		<!-- JUnit -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -180,6 +121,7 @@
 			<artifactId>shrinkwrap-impl-base</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 		<!-- JMeter -->
 		<dependency>
 			<groupId>com.lazerycode.jmeter</groupId>
@@ -233,28 +175,18 @@
 				</includes>
 			</resource>
 		</resources>
-		<extensions>
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-ssh</artifactId>
-				<version>${wagon-ssh.version}</version>
-			</extension>
-		</extensions>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>${maven-war-plugin.version}</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${maven-surefire-plugin.version}</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>${maven-dependency-plugin.version}</version>
 				<executions>
 					<execution>
 						<id>unpack-jboss</id>
@@ -279,7 +211,6 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>${maven-failsafe-plugin.version}</version>
 				<configuration>
 					<argLine>-Xms128m -Xmx512m -XX:MaxPermSize=512m</argLine>
 				</configuration>
@@ -294,29 +225,11 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>${maven-surefire-report-plugin.version}</version>
-				<executions>
-					<execution>
-						<phase>post-integration-test</phase>
-						<goals>
-							<goal>failsafe-report-only</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-project-info-reports-plugin</artifactId>
-				<version>${maven-project-info-reports-plugin.version}</version>
-				<configuration>
-					<dependencyLocationEnabled>false</dependencyLocationEnabled>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.4.2</version>
 				<configuration>
 					<pushChanges>false</pushChanges>
 				</configuration>
@@ -333,19 +246,6 @@
 			</plugin>
 		</plugins>
 	</reporting>
-
-	<distributionManagement>
-		<repository>
-			<id>releases</id>
-			<name>Kurento releases repository</name>
-			<url>scp://repository.kurento.com/opt/tomcat/current/data/repositories/internal</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshots</id>
-			<name>Kurento snapshots repository</name>
-			<url>scp://repository.kurento.com/opt/tomcat/current/data/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
 
 	<profiles>
 		<!-- Webdrivers for Chrome (binary dependencies in the repository) -->
@@ -498,35 +398,4 @@
 		<!-- /Webdrivers for Chrome (binary dependencies in the repository) -->
 	</profiles>
 
-	<repositories>
-		<repository>
-			<id>kurento-snapshots</id>
-			<name>Kurento Snapshot Repository</name>
-			<url>http://repository.kurento.com/archiva/repository/snapshots/</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>kurento-releases</id>
-			<name>Kurento Repository</name>
-			<url>http://repository.kurento.com/archiva/repository/internal/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
-
-	<scm>
-		<url>https://github.com/Kurento/${project.artifactId}</url>
-		<connection>scm:git:https://github.com/Kurento/${project.artifactId}.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com:Kurento/${project.artifactId}.git</developerConnection>
-		<tag>develop</tag>
-	</scm>
 </project>
