--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.kurento</groupId>
@@ -104,6 +105,7 @@
 		<fluent-hc.version>4.3.2</fluent-hc.version>
 		<commons-lang.version>2.6</commons-lang.version>
 		<scribe.version>1.3.5</scribe.version>
+		<keystone-client.version>3.2.1</keystone-client.version>
 
 		<!-- **************** -->
 		<!-- Plugins versions -->
@@ -247,6 +249,26 @@
 				<groupId>com.kurento.kmf</groupId>
 				<artifactId>kmf-spring</artifactId>
 				<version>${kmf-spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.woorea</groupId>
+				<artifactId>keystone-client</artifactId>
+				<version>${keystone-client.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.woorea</groupId>
+				<artifactId>jersey-connector</artifactId>
+				<version>${keystone-client.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.woorea</groupId>
+				<artifactId>jersey2-connector</artifactId>
+				<version>${keystone-client.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.woorea</groupId>
+				<artifactId>resteasy-connector</artifactId>
+				<version>${keystone-client.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
@@ -817,7 +839,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<execute/>
+										<execute />
 									</action>
 								</pluginExecution>
 								<!-- Configure m2e to ignore the Maven enforcer plugin -->
@@ -831,7 +853,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore/>
+										<ignore />
 									</action>
 								</pluginExecution>
 								<!-- Configure m2e to ignore the buildnumber-maven-plugin. -->
@@ -846,7 +868,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore/>
+										<ignore />
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
