Updated generated file used by Bower
Change-Id: I8e1c75502c2805d993798dd1ad43635fbb1fc174

--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,11 @@
 {
   "name": "kws-media-api",
-  "version": "0.0.1",
-  "authors": "Kurento <info@kurento.com> (http://kurento.org)",
+  "version": "4.1.1",
+  "authors": [
+    "Kurento <info@kurento.com> (http://kurento.org)"
+  ],
   "description": "Kurento Content Management API for Web SDK",
-  "main": "dist/kws-media-api.js",
+  "main": "dist/KwsMedia.js",
   "keywords": [
     "API",
     "Kurento",
@@ -14,5 +16,12 @@
     "WebRTC"
   ],
   "license": "LGPL",
-  "homepage": "http://www.kurento.com"
+  "homepage": "http://www.kurento.com",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ]
 }
