[release] Prepare release 4.2.0
Change-Id: I6163dae420d0cd5f82d61120def28524e7b60dd5

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "KwsMedia",
-  "version": "4.1.1-SNAPSHOT",
+  "version": "4.2.0",
   "description": "Media API for the Kurento Web SDK",
   "homepage": "http://www.kurento.com",
   "license": "LGPL",
