--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>com.kurento</groupId>
 		<artifactId>kmf-parent-pom</artifactId>
-		<version>4.1.1-SNAPSHOT</version>
+		<version>4.2.0</version>
 	</parent>
 
 	<groupId>com.kurento.kmf</groupId>
@@ -33,7 +32,7 @@
 		<url>https://github.com/Kurento/${project.artifactId}</url>
 		<connection>scm:git:https://github.com/Kurento/${project.artifactId}.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com:Kurento/${project.artifactId}.git</developerConnection>
-		<tag>develop</tag>
+		<tag>kmf-media-connector-4.2.0</tag>
 	</scm>
 
 	<developers>
@@ -90,9 +89,7 @@
 						<phase>package</phase>
 						<configuration>
 							<tasks>
-								<copy
-									file="${project.build.directory}/target/${project.name}-${project.version}-bin.zip"
-									tofile="${project.build.directory}/target/${project.name}-${project.version}.zip" />
+								<copy file="${project.build.directory}/target/${project.name}-${project.version}-bin.zip" tofile="${project.build.directory}/target/${project.name}-${project.version}.zip"/>
 							</tasks>
 						</configuration>
 					</execution>
