--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "KwsMedia",
+  "name": "kws-media-api",
   "version": "4.2.1-SNAPSHOT",
   "description": "Media API for the Kurento Web SDK",
   "homepage": "http://www.kurento.com",
