Using specific version for grunt-browserify
Change-Id: I9d29f3e2c49ba2f40a663003f0cbfdaed4386c6c

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "devDependencies": {
     "bower": "latest",
     "grunt": "latest",
-    "grunt-browserify": "latest",
+    "grunt-browserify": "~2.0.1",
     "grunt-cli": "latest",
     "grunt-contrib-clean": "latest",
     "grunt-contrib-copy": "latest",
