--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,7 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>com.kurento</groupId>
 		<artifactId>kmf-parent-pom</artifactId>
@@ -49,12 +50,10 @@
 		<dependency>
 			<groupId>com.kurento.kmf</groupId>
 			<artifactId>kmf-content-api</artifactId>
-			<version>${kmf-content-api.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.kurento.kws</groupId>
 			<artifactId>kws-content-api</artifactId>
-			<version>${kws-content-api.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
