[release] Prepare for next development iteration
Change-Id: I80a02d65c983345bd079bd90cc02bc74aa43231c

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kws-rpc-builder",
-  "version": "4.2.1",
+  "version": "4.2.2-SNAPSHOT",
   "description": "RPC library for browser and Node.js",
   "main": "index.js",
   "scripts": {
