--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>com.kurento</groupId>
 		<artifactId>kmf-parent-pom</artifactId>
-		<version>4.1.0</version>
+		<version>4.2.2-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.kurento.kmf</groupId>
 	<artifactId>kmf-content-api-test</artifactId>
-	<version>4.1.1-SNAPSHOT</version>
+	<version>${project.parent.version}</version>
 	<packaging>war</packaging>
 
 	<properties>
