[release] Prepare for next development iteration
Change-Id: Ic58303412984c03b4dc3f9c367b516b30bd82324

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.kurento</groupId>
 		<artifactId>kmf-parent-pom</artifactId>
-		<version>4.2.2</version>
+		<version>4.2.3-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.kurento.kmf</groupId>
@@ -30,7 +30,7 @@
 		<url>https://github.com/Kurento/${project.artifactId}</url>
 		<connection>scm:git:https://github.com/Kurento/${project.artifactId}.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com:Kurento/${project.artifactId}.git</developerConnection>
-		<tag>kmf-jsonrpcconnector-4.2.2</tag>
+		<tag>develop</tag>
 	</scm>
 
 	<developers>
