--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kws-rpc-builder",
-  "version": "4.2.2-SNAPSHOT",
+  "version": "4.2.2",
   "description": "RPC library for browser and Node.js",
   "main": "index.js",
   "scripts": {
