--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kws-media-api",
-  "version": "4.2.2",
+  "version": "4.2.3-SNAPSHOT",
   "description": "Media API for the Kurento Web SDK",
   "homepage": "http://www.kurento.com",
   "license": "LGPL",
