[release] Prepare for next development iteration
Change-Id: I4adb69f2ee8e573209ef8341172adcdccd8b30a7

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.kurento</groupId>
 		<artifactId>kmf-parent-pom</artifactId>
-		<version>4.2.2</version>
+		<version>4.2.3-SNAPSHOT</version>
 	</parent>
 	
 	<groupId>com.kurento.kmf</groupId>
@@ -50,4 +50,4 @@
 		</plugins>
 	</build>
 
-<scm><tag>kmf-assembly-4.2.2</tag></scm></project>
+</project>
