--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.kurento</groupId>
 	<artifactId>kmf-tutorial</artifactId>
-	<version>4.2.2-SNAPSHOT</version>
+	<version>4.2.2</version>
 	<packaging>war</packaging>
 
 	<properties>
@@ -17,13 +17,13 @@
 		<dependency>
 			<groupId>com.kurento.kmf</groupId>
 			<artifactId>kmf-content-api</artifactId>
-			<version>4.2.2-SNAPSHOT</version>
+			<version>4.2.2</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.kurento.kws</groupId>
 			<artifactId>kws-content-api</artifactId>
-			<version>4.2.2-SNAPSHOT</version>
+			<version>4.2.2</version>
 		</dependency>
 	</dependencies>
 </project>
