Add missing field to pom.xml
Change-Id: I6358216863366cf0e3ff465ae097e31051423cd6

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
 	<groupId>com.kurento.kmf</groupId>
 	<artifactId>kmf-media-connector</artifactId>
+	<version>${project.parent.version}</version>
 	<packaging>jar</packaging>
 
 	<name>kmf-media-connector</name>
