--- a/pom.xml
+++ b/pom.xml
@@ -96,10 +96,9 @@
 		<project.youtube.version>v3-rev73-1.13.2-beta</project.youtube.version>
 		<project.http.version>1.13.1-beta</project.http.version>
 		<project.oauth.version>1.13.1-beta</project.oauth.version>
-		<spring-data.version>1.3.2.RELEASE</spring-data.version>
-		<spring-boot.version>1.0.1.RELEASE</spring-boot.version>
+		<spring-boot.version>1.0.0.RC1</spring-boot.version>
 		<spring.version>4.0.1.RELEASE</spring.version>
-		<spring-data-commons.version>1.7.1.RELEASE</spring-data-commons.version>
+		<spring-data.version>1.3.2.RELEASE</spring-data.version>
 		<spring-websocket.version>4.0.1.RELEASE</spring-websocket.version>
 		<spring-security.version>3.2.0.RELEASE</spring-security.version>
 		<spring-oauth2.version>1.0.5.RELEASE</spring-oauth2.version>
@@ -325,11 +324,6 @@
 				<version>${spring.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.data</groupId>
-				<artifactId>spring-data-commons</artifactId>
-				<version>${spring-data-commons.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.data</groupId>
@@ -1087,4 +1081,28 @@
 		</profile>
 	</profiles>
 
+	<!-- Add Spring repositories for Spring Boot -->
+	<repositories>
+		<repository>
+			<id>spring-snapshots</id>
+			<url>http://repo.spring.io/snapshot</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>spring-milestones</id>
+			<url>http://repo.spring.io/milestone</url>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>spring-snapshots</id>
+			<url>http://repo.spring.io/snapshot</url>
+		</pluginRepository>
+		<pluginRepository>
+			<id>spring-milestones</id>
+			<url>http://repo.spring.io/milestone</url>
+		</pluginRepository>
+	</pluginRepositories>
 </project>
