--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
 		<selenium-java.version>2.41.0</selenium-java.version>
 		<xml-apis.version>1.4.01</xml-apis.version>
 		<jetty-server.vesion>9.1.3.v20140225</jetty-server.vesion>
+		<ApacheJMeter_core.version>2.9</ApacheJMeter_core.version>
+		<jmeter-maven-plugin.version>1.8.1</jmeter-maven-plugin.version>
+		<freemarker.version>2.3.20</freemarker.version>
 
 		<!-- Webdrivers versions -->
 		<linux32-webdriver.version>2.9</linux32-webdriver.version>
@@ -41,7 +44,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<version>1.0.0.RC1</version>
 		</dependency>
 		<!-- End Spring boot -->
 
@@ -79,9 +81,6 @@
 			<version>${jetty-server.vesion}</version>
 		</dependency>
 
-		<!-- Tomcat <dependency> <groupId>org.apache.tomcat.embed</groupId> <artifactId>tomcat-embed-core</artifactId> 
-			<version>${tomcat-embed.version}</version> </dependency> -->
-
 		<!-- Selenium -->
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -92,6 +91,23 @@
 			<groupId>xml-apis</groupId>
 			<artifactId>xml-apis</artifactId>
 			<version>${xml-apis.version}</version>
+		</dependency>
+
+		<!-- JMeter -->
+		<dependency>
+			<groupId>com.lazerycode.jmeter</groupId>
+			<artifactId>jmeter-maven-plugin</artifactId>
+			<version>${jmeter-maven-plugin.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.jmeter</groupId>
+			<artifactId>ApacheJMeter_core</artifactId>
+			<version>${ApacheJMeter_core.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>${freemarker.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -246,28 +262,4 @@
 		<!-- /Webdrivers for Chrome (binary dependencies in the repository) -->
 	</profiles>
 
-	<!-- Add Spring repositories for Spring Boot -->
-	<repositories>
-		<repository>
-			<id>spring-snapshots</id>
-			<url>http://repo.spring.io/snapshot</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>spring-milestones</id>
-			<url>http://repo.spring.io/milestone</url>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>spring-snapshots</id>
-			<url>http://repo.spring.io/snapshot</url>
-		</pluginRepository>
-		<pluginRepository>
-			<id>spring-milestones</id>
-			<url>http://repo.spring.io/milestone</url>
-		</pluginRepository>
-	</pluginRepositories>
 </project>
