Added kmf-commons submodule
Change-Id: I19125b7bb4181e884b867bea9cd13ddc1211b5cb

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "kmf-spring"]
 	path = kmf-spring
 	url = ../kmf-spring
+[submodule "kmf-commons"]
+	path = kmf-commons
+	url = ../kmf-commons
