pom.xml: Add scm tag
Change-Id: I33ba97441d8b3da03794ecfd76f9e856bed7f719

--- a/pom.xml
+++ b/pom.xml
@@ -107,4 +107,11 @@
 		</dependency>
 
 	</dependencies>
+
+	<scm>
+		<url>https://github.com/Kurento/${project.artifactId}</url>
+		<connection>scm:git:https://github.com/Kurento/${project.artifactId}.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com:Kurento/${project.artifactId}.git</developerConnection>
+		<tag>develop</tag>
+	</scm>
 </project>
